--- a/css/main.scss
+++ b/css/main.scss
@@ -100,6 +100,7 @@ $deep-cover-img:    "/images/background/background-tech.jpg";
     "pagination",
     "publications",
     "bio",
+    "news",
     "resume",
     "posts",
     "projects"
