--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -1,3 +1,9 @@
+{% if site.social.google_scholar %}
+<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/citations?user={{" }}">
+  <img src="/images/icon/color-google_scholar.png" class="social-icon">
+</a>
+{% endif %}
+
 {% if site.social.twitter %}
 <a href="{{ site.social.twitter | prepend: "https://twitter.com/" }}">
   <img src="/images/icon/color-twitter.png" class="social-icon">
