--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,3 +1,10 @@
+{% if site.social.google_scholar %}
+<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/citations?user=' }}" class="icon-button google_scholar">
+  <i class="fa fa-google-scholar icon-google_scholar"></i>
+  <span></span>
+</a>
+{% endif %}
+
 {% if site.social.github %}
 <a href="{{ site.social.github | prepend: 'https://github.com/' }}" class="icon-button github">
   <i class="fa fa-github icon-github"></i>
