--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -1,5 +1,5 @@
 {% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/citations?user={{" }}">
+<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/{{" }}">
   <img src="/images/icon/color-google_scholar.png" class="social-icon">
 </a>
 {% endif %}
