--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,6 +1,6 @@
-{% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/citations?user=' }}" class="icon-button google_scholar">
-  <i class="fa fa-google-scholar icon-google_scholar"></i>
+{% if site.social.google-scholar %}
+<a href="{{ site.social.google-scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google-scholar">
+  <i class="fa fa-google-scholar icon-google-scholar"></i>
   <span></span>
 </a>
 {% endif %}
