--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -1,6 +1,6 @@
-{% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/{{" }}">
-  <img src="/images/icon/color-google_scholar.png" class="social-icon">
+{% if site.social.google-scholar %}
+<a href="{{ site.social.google-scholar | prepend: "https://scholar.google.com/{{" }}">
+  <img src="/images/icon/color-google-scholar.png" class="social-icon">
 </a>
 {% endif %}
 
