--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -1,5 +1,5 @@
 {% if site.social.google-scholar %}
-<a href="{{ site.social.google-scholar | prepend: "https://scholar.google.com/{{" }}">
+<a href="{{ site.social.google-scholar | prepend: "https://scholar.google.com/" }}">
   <img src="/images/icon/color-google-scholar.png" class="social-icon">
 </a>
 {% endif %}
