--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% if site.social.linkedin %}
-<a href="{{ site.social.linkedin | prepend: "https://linkedin.com/in/{{" }}">
+<a href="{{ site.social.linkedin | prepend: "https://linkedin.com/in/" }}">
   <img src="/images/icon/color-linkedin.png" class="social-icon">
 </a>
 {% endif %}
