--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -4,6 +4,12 @@
 </a>
 {% endif %}
 
+{% if site.social.google-scholar %}
+<a href="{{ site.social.google-scholar | prepend: "https://scholar.google.com/" }}">
+  <img src="/images/icon/color-google-scholar.png" class="social-icon">
+</a>
+{% endif %}
+
 {% if site.social.linkedin %}
 <a href="{{ site.social.linkedin | prepend: "https://linkedin.com/in/" }}">
   <img src="/images/icon/color-linkedin.png" class="social-icon">
