--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -4,8 +4,8 @@
 </a>
 {% endif %}
 
-{% if site.social.google-scholar %}
-<a href="{{ site.social.google-scholar | prepend: "https://scholar.google.com/" }}">
+{% if site.social.google_scholar %}
+<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/" }}">
   <img src="/images/icon/color-google-scholar.png" class="social-icon">
 </a>
 {% endif %}
