--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -7,7 +7,7 @@
 
 {% if site.social.google_scholar %}
 <a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
-  <img src="/images/icon/color-google_scholar.png" class="social-icon">
+  <i class="ai ai-google-scholar-square ai-3x"></i>
   <span></span>
 </a>
 {% endif %}
