--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,13 +1,13 @@
-{% if site.social.github %}
-<a href="{{ site.social.github | prepend: 'https://github.com/' }}" class="icon-button github">
-  <i class="fa fa-github icon-github"></i>
+{% if site.social.google_scholar %}
+<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
+  <i class="fa fa-google icon-google_scholar"></i>
   <span></span>
 </a>
 {% endif %}
 
-{% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
-  <i class="ai ai-google-scholar-square ai-3x"></i>
+{% if site.social.github %}
+<a href="{{ site.social.github | prepend: 'https://github.com/' }}" class="icon-button github">
+  <i class="fa fa-github icon-github"></i>
   <span></span>
 </a>
 {% endif %}
