--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,7 +1,6 @@
 {% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
+<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/" }}">
   <img src="/images/icon/color-google_scholar.png" class="social-icon">
-  <span></span>
 </a>
 {% endif %}
 
