--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,6 +1,7 @@
 {% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/" }}">
-  <img src="/images/icon/color-google_scholar.png" class="social-icon">
+<a href="{{ site.social.google_scholar | prepend: 'https://github.com/' }}" class="icon-button google">
+  <i class="fa fa-google icon-google"></i>
+  <span></span>
 </a>
 {% endif %}
 
