--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,6 +1,6 @@
 {% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: 'https://github.com/' }}" class="icon-button google">
-  <i class="fa fa-google icon-google"></i>
+<a href="{{ site.social.google_scholar | prepend: 'https://github.com/' }}" class="icon-button facebook">
+  <i class="fa fa-facebook icon-facebook"></i>
   <span></span>
 </a>
 {% endif %}
