--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,5 +1,5 @@
 {% if site.social.google_scholar %}
-<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button facebook">
+<a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
   <i class="fa fa-facebook icon-facebook"></i>
   <span></span>
 </a>
