--- a/_includes/interactive-social.html
+++ b/_includes/interactive-social.html
@@ -1,6 +1,6 @@
 {% if site.social.google_scholar %}
 <a href="{{ site.social.google_scholar | prepend: 'https://scholar.google.com/' }}" class="icon-button google_scholar">
-  <i class="fa fa-facebook icon-google_scholar"></i>
+  <i class="fa fa-facebook icon-fa-facebook"></i>
   <span></span>
 </a>
 {% endif %}
