--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
   <div class="wrapper">
 
     <h2 class="footer-heading">
-      <a class="page-link" href="{{ '/about' | prepend: site.url }}">
-      {{ site.title | prepend: 'About ' }}
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">
     </a></h2>
 
     <div class="footer-col-wrapper">
