--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -70,7 +70,7 @@
     background-color: $twitter-color;
 }
 .google_scholar span {
-    background-color: $google_scholar-color;
+    background-color: $twitter-color;
 }
 .facebook span {
     background-color: $facebook-color;
@@ -101,7 +101,7 @@
     color: $twitter-color;
 }
 .icon-button .icon-google_scholar {
-    color: $google_scholar-color;
+    color: $twitter-color;
 }
 .icon-button .icon-facebook {
     color: $facebook-color;
