--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -70,7 +70,7 @@
     background-color: $twitter-color;
 }
 .google_scholar span {
-    background-color: $twitter-color;
+    background-color: $google-color;
 }
 .facebook span {
     background-color: $facebook-color;
