--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ $brand-color-dark:  darken($brand-color, 25%);
 $boya-color:        #35DACA;
 $linkedin-color:    #0077B5;
 $twitter-color:     #4099ff;
-$google_scholar-color:     #000000;
+$google_scholar-color:     #4099ff;
 $facebook-color:    #3B5998;
 $github-color:      #000000;
 
