--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
+<footer class="site-footer">
+  <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">
+</footer>
+
 {% if page.comments == True %}
 <footer class="site-footer">
 
   <div class="wrapper">
-
-    <h2 class="footer-heading">
-      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">
-    </a></h2>
-
+    
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
