--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,14 @@
-<footer class="site-footer">
-  <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">
-</footer>
-
 {% if page.comments == True %}
 <footer class="site-footer">
 
+  <div class="am-g">
+    <h1>
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">
+      </a>
+    </h1>
+  </div>
+  <hr />
+  
   <div class="wrapper">
     
     <div class="footer-col-wrapper">
