--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
   
   <div class="wrapper">
     
-    <h1 class="footer-heading">
+    <div class="wrapper">
       <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">   
-    </a></h1>
+    </a></div>
     
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
