--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
     
     <div class="wrapper">
-      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff">   
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" width="30%">
     </a></div>
     
     <div class="footer-col-wrapper">
