--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -187,7 +187,11 @@ pre {
   }
 }
 
-
+.map_wrapper{
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  margin:auto;
+}
 
 /**
  * Clearfix
