--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {% if page.comments == True %}
 <footer class="site-footer">
   
-  <div class="wrapper">
+  <div class="map_wrapper">
       <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" width="50%">
     </a>
   </div>
