--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 {% if page.comments == True %}
 <footer class="site-footer">
   
-  <div class="map_wrapper">
-      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" style="display: block; margin: 0px auto; vertical-align: middle;">
+  <div class="wrapper">
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" width="20%" style="display: block; margin: 0px auto; vertical-align: middle;">
     </a>
   </div>
   
