--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,9 @@
 <footer class="site-footer">
   
   <div class="map_wrapper">
-      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" width="25%" style="display: block; margin: 0px auto; vertical-align: middle;">
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&cl=ffffff" style="display: block; margin: 0px auto; vertical-align: middle;">
     </a>
   </div>
-  <hr>
   
   <div class="wrapper">
     
