--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -12,7 +12,7 @@
         {{ site.data.bio.title }}
       </div>
       <div id="my-email" class="text-grey-light">
-        {{ site.data.bio.email }}
+        <a href="mailto:{{ site.email }}">{{ site.data.bio.email }}</a>
       </div>
       <div class="social-media">
           {% include interactive-social.html %}
