--- a/_includes/color-social.html
+++ b/_includes/color-social.html
@@ -6,19 +6,19 @@
 
 {% if site.social.google_scholar %}
 <a href="{{ site.social.google_scholar | prepend: "https://scholar.google.com/" }}">
-  <img src="/images/icon/color-google_scholar.png" class="social-icon">
-</a>
-{% endif %}
-
-{% if site.social.linkedin %}
-<a href="{{ site.social.linkedin | prepend: "https://linkedin.com/in/" }}">
-  <img src="/images/icon/color-linkedin.png" class="social-icon">
+  <i class="fa fa-google icon-google_scholar"></i>
 </a>
 {% endif %}
 
 {% if site.social.github %}
 <a href="{{ site.social.github | prepend: "https://github.com/" }}">
-  <img src="/images/icon/color-github.png" class="social-icon">
+  <i class="fa fa-github icon-github"></i>
+</a>
+{% endif %}
+
+{% if site.social.linkedin %}
+<a href="{{ site.social.linkedin | prepend: "https://linkedin.com/in/" }}">
+  <i class="fa fa-linkedin icon-linkedin"></i>
 </a>
 {% endif %}
 
