--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="site-footer">
   
   <div class="map_wrapper">
-      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=600&t=tt&d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&co=a2c7db&ct=ff0000" style="display: block; margin: 0px auto; vertical-align: middle;">
+      <a href="https://clustrmaps.com/site/1a8yz" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=e8f274&w=500&t=tt&d=2yAuTMf8hqLjpb5HU-FLaHebRXd3NzpjzjrUgHqzZG8&co=77b1d1&ct=ffffff" style="display: block; margin: 0px auto; vertical-align: middle;">
     </a>
   </div>
   <hr width=50%>
