--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,6 @@ $deep-cover-img:    "/images/background/background-tech.jpg";
     "bio",
     "news",
     "resume",
-    "alumni",
+    "posts",
     "projects"
     ;
