--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,8 +10,8 @@
     <a class="page-link" href="{{ site.baseurl }}/">Home</a>
 
     {% for page in site.pages %}
-      <!-- Button for Alumni -->
-      {% if page.title == 'Alumni' %}
+      <!-- Button for People -->
+      {% if page.title == 'People' %}
         {% if page.url contains 'page' %}
         {% else %}
         <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
